feat: Integrate async event bus for bootcamp publishing and enhance bootcamp use cases with new dependencies and configurations

--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -16,6 +16,8 @@ spring:
       max-size: 20
       max-idle-time: "30m"
       validation-query: "SELECT 1"
+  rabbitmq:
+    addresses: ${RABBIT_URL}
 management:
   endpoints:
     web:
@@ -34,6 +36,10 @@ adapter:
   restconsumer:
     timeout: 5000
     url: ${CAPACITY_ENDPOINT}
+  rabbit:
+    queue: ${RABBIT_QUEUE}
+    exchange: ${RABBIT_TOPIC}
+    routingkey: ${RABBIT_ROUTING_KEY}
 resilience4j:
   circuitbreaker:
     instances:
